# Praktikum

./: CMakeLists.txt  Debugging.md  Praktikum_cuda.md  Run_open_with_cuda  Training_optuna_MLflow.py  data.yaml  jetson_cmake.md  main.cpp  object_counting.py  params.yaml  praktikum_results
